kubernetes-modified/ingress-fixed.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: advertising-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
